@@ -1,8 +1,8 @@
 \input texinfo
 
 @setfilename xforms.info
-@settitle XForms (Forms Library)@*A Graphical User Interface Toolkit for X@*Version 1.0.94
-@set lastupdate May 22, 2011
+@settitle XForms (Forms Library)@*A Graphical User Interface Toolkit for X@*Version 1.2
+@set lastupdate August 11, 2011
 @paragraphindent 0
 
 @titlepage
@@ -12,9 +12,9 @@
 @sp 1
 @center @titlefont{A Graphical User Interface Toolkit for X}
 @sp 8
-@center Library Version 1.0.94
+@center Library Version 1.2
 @sp 2
-@center May 2011
+@center August 2011
 @sp 8
 @end titlepage
 
